@@ -1,3 +1,7 @@
+2009-01-16  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* AspNetEdit.Integration/AspNetEditDisplayBinding.cs: Track API.
+
 2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* AspNetEdit.mdp: Don't require a specific version of Mono.Addins.
